--- a/js/projects.json
+++ b/js/projects.json
@@ -14,7 +14,7 @@
         "description": "Website that consumes Disney Movies API to display top movies, trailers, previous reviews, and add new reviews.",
         "githubUrl": "https://github.com/abraham-espinosa/disney-movies",
         "githubImg": "svg/github.svg",
-        "siteUrl": "https://abraham-espinosa-disney-movies.netlify.app/",
+        "siteUrl": "https://abrahameg-movies.onrender.com/",
         "siteImg": "svg/link.svg",
         "technologies": "JavaScript, React, and CSS"
       },
