--- a/js/projects.json
+++ b/js/projects.json
@@ -2,7 +2,7 @@
     "projects": [
       {
         "title": "Disney Movies",
-        "description": "Developed a full-stack web application that displays famous Disney movies and allows users to create movie reviews. Created a RESTful API (GitHub Repository<a href='https://github.com/abraham-espinosa/disney-movies-api'> click here</a>, Live API<a href='https://api-disneymovies.onrender.com'> click here</a>) enabling data to be stored in an online database and built a website to consume the RESTful API.",
+        "description": "Developed a full-stack web application that displays famous Disney movies and allows users to create movie reviews. Created a RESTfu1l API (<a href='https://github.com/abraham-espinosa/disney-movies-api'>GitHub Repository</a> - <a href='https://api-disneymovies.onrender.com'>Live API</a>) enabling data to be stored in an online database and built a website to consume the RESTful API.",
         "githubUrl": "https://github.com/abraham-espinosa/disney-movies",
         "githubImg": "svg/github.svg",
         "siteUrl": "https://disneymovies.onrender.com",
