--- a/js/projects.json
+++ b/js/projects.json
@@ -1,6 +1,28 @@
 {
     "projects": [
       {
+        "title": "Marvel Characters",
+        "description": " Developed a full-stack web application that implements MVC and CRUD architectures to consume Marvel API characters and display them, allowing users to create new characters and update-delete the existing ones.",
+        "githubUrl": "https://github.com/abraham-espinosa/marvel-codeigniter4",
+        "githubImg": "svg/github.svg",
+        "siteUrl": "",
+        "siteImg": "svg/link.svg",
+        "youtubeUrl": "",
+        "youtubeImg": "svg/youtube.svg",
+        "technologies": "Java, SpringBoot, React, JavaScript, MongoDB"
+      },
+      {
+        "title": "PHP Motors",
+        "description": " Constructed a dynamic website that allows users to authenticate and create reviews. Used sessions and cookies to log in.",
+        "githubUrl": "https://github.com/abraham-espinosa/phpmotors",
+        "githubImg": "svg/github.svg",
+        "siteUrl": "",
+        "siteImg": "svg/link.svg",
+        "youtubeUrl": "https://youtu.be/CkI6kdF47Fs",
+        "youtubeImg": "svg/youtube.svg",
+        "technologies": "PHP, MySQL, HTML/CSS"
+      },
+      {
         "title": "Disney Movies",
         "description": "Developed a full-stack web application that displays famous Disney movies and allows users to create movie reviews. Created a RESTfu1l API (<a href='https://github.com/abraham-espinosa/disney-movies-api'>GitHub Repository</a> - <a href='https://api-disneymovies.onrender.com'>Live API</a>) enabling data to be stored in an online database and built a website to consume the RESTful API.",
         "githubUrl": "https://github.com/abraham-espinosa/disney-movies",
@@ -21,17 +43,6 @@
         "youtubeUrl": "https://youtu.be/Y8fh4oB31TQ",
         "youtubeImg": "svg/youtube.svg",
         "technologies": "NodeJS, Express, EJS, Mailgun, MongoDB"
-      },
-      {
-        "title": "PHP Motors",
-        "description": " Constructed a dynamic website that allows users to authenticate and create reviews. Used sessions and cookies to log in.",
-        "githubUrl": "https://github.com/abraham-espinosa/phpmotors",
-        "githubImg": "svg/github.svg",
-        "siteUrl": "",
-        "siteImg": "svg/link.svg",
-        "youtubeUrl": "https://youtu.be/CkI6kdF47Fs",
-        "youtubeImg": "svg/youtube.svg",
-        "technologies": "PHP, MySQL, HTML/CSS"
       },
       {
         "title": "Syphus Budget",
